# time-sheet-admin

./: .firebaserc  README.md  firebase.json  index.html
agent/: README.md  pyproject.toml
agent/agent/: code_base_provider.py  main.py  process_files.py
agent/agent/tools/: code_base_provider.py  get_code_changes.py
functions/: index.js  package-lock.json  utils.js
js/: main.js
js/components/: user-management.js
