[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "trevor",email = "thisistrevor4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "atomic-agents (>=1.0.17,<2.0.0)",
    "openai (>=1.59.8,<2.0.0)",
    "instructor (>=1.7.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"